--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -4,6 +4,7 @@
     "declarationDir": "dist/types",
     "target": "esnext",
     "module": "esnext",
+    "jsx": "react-jsx",
     "declaration": true,
     "emitDeclarationOnly": true,
     "strict": true,
@@ -15,5 +16,5 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["src", "syntax"]
 }
