Add preact compat to app

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "build:src": "vite build",
     "build:type": "tsc",
     "app": "vite ./app -c=./app/vite.config.ts",
-    "app:build": "vite build ./app -c=./app/vite.config.ts",
+    "app-build": "vite build ./app -c=./app/vite.config.ts",
+    "app-preview": "vite preview ./app -c=./app/vite.config.ts",
     "test": "vitest run",
     "test:w": "vitest watch",
     "clean": "rimraf ./dist",
