--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsxlike",
   "description": "Converting HTML to React JSX-like syntax",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "browser": "dist/jsxlike.js",
   "module": "dist/jsxlike.esm.js",
   "types": "dist/types/index.d.ts",
@@ -59,6 +59,7 @@
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
+    "vite-plugin-svgr": "^2.4.0",
     "vitest": "^0.28.4"
   }
 }
